--- a/styles/styles.css
+++ b/styles/styles.css
@@ -91,14 +91,14 @@ body{
 
 .stat-content{
     border: 1px solid green;
-    padding: 1rem;
+    padding: 1rem 1rem 0 1rem; 
     font-family: 'Signika Negative'
 }
 
 .stat-content > ul > li{
     display: flex;
     justify-content: space-between;
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
     font-size: 1.1rem;
 }
 
