--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@ ul,li{
 body{
     display: flex;
     flex-direction: column;
-    background-color: aqua;
+
 }
 
 .container{
@@ -30,19 +30,19 @@ body{
 }
 
 
-/*header*/
+
 .header{
     background-color: rgb(0, 0, 0);
     padding: 0.5rem 0.5rem 0.5rem 2rem;
     color: aliceblue;
     font-size: 1.2rem;
     position: fixed;
-    /* overflow: hidden; */
-    top: 0;
+    overflow: hidden;
+     top: 0;
     left: 0;
     right: 0;
     z-index: 24;
-}
+}  
 
 .header{
     display: flex;
@@ -54,20 +54,20 @@ body{
 
 
 /*Side panel*/
-.side-panel{
+/* .side-panel{
     background-color: rgb(245, 220, 220);
    /* background-color: blanchedalmond;
     background-color: rgba(236, 114, 1, 0.671);
     background-color: rgb(254, 255, 233);
     background-color: rgb(255, 153, 0);
     color: rgb(0, 0, 0);*/
-}
+/* } */
 
-.side-panel{
+/* .side-panel{
     flex: 0 0 20%;
-}
+} */
 
-.side-panel{
+/* .side-panel{
  
     display: flex;
     flex-direction: column;
@@ -78,7 +78,7 @@ body{
     overflow: hidden;
     max-height: 100dvh;
 
-}
+} */
 
 .stat{
     border: 1px solid red;
@@ -143,7 +143,7 @@ main{
 */
 
 
-    background-color: aqua;
+    /* background-color: aqua; */
 }
 
 
@@ -176,129 +176,11 @@ main{
 
 }
 
-.top{
-    min-height: 10.9rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: 1rem;
-}
-
-.read{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    text-align: center;
-    align-items: center;
-    padding-bottom: 5rem;
-}
-
-.read > div > h2{
-    font-size: 1.2rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 100;
-    padding-bottom: 1rem;
-}
-
-.read > div > p{
-    font-size: 1.2rem;
-    padding-bottom: 1rem;
-    font-family: monospace;
-}
-
-.line{
-    height: 5.5rem;
-    width: 1px;
-    background-color: antiquewhite;
-    align-self: flex-start;
-}
-
-.pc{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
-    padding: 1rem;
-}
-
-.pc > button{
-    width: 70%;
-    height: 2rem;
-    font-size: 1.5rem;
-    align-self: center;
-}
-
-.pc > button{
-    background-color: transparent;
-    border: none;
-    border: 1px solid beige;
-    color: antiquewhite;
-    transition: 200ms ease-in-out;
-}
-
-.pc > button:hover{
-    transform: scale(1.05);
-    background: rgba(0, 0, 0, 0.603);
-    cursor: pointer;
-}
-
-.complete{
-    display: flex;
-    padding: 1rem 1rem 1rem 1rem;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
-    font-size: 1.1rem;
-    font-family: oswald;
-}
-
-.com > input{
-    margin-left: 1rem;
-}
-
-.edit:hover{
-    transition: 200ms ease-in-out;
-    transform: scale(1.2);
-}
-
-.comp-banner{
-    background: rgb(4, 241, 4);
-    transform: scale(0);
-    color: rgb(0, 0, 0);
-    width: 100%;
-    padding: 0;
-    text-align: center;
-}
-
-.comp-banner.active{
-    transform: scale(1);
-}
-
-.author{
-    text-align: right;
-}
-
-
-.add-btn{
-    background-color: transparent;
-    border: none;
-    font-size: 5rem;
-    color: white;
-    border: 5px solid white;
-    border-radius: 1rem;
-    min-height: 490px;
-}
-
-.add-btn:hover{
-    cursor: pointer;
-}
-
 
 
 
 /*Form*/
-.popup-form, .popup-edit-form{
+ /* .popup-form, .popup-edit-form{
     position: fixed;
     top: 50%;
     left: 50%;
@@ -311,7 +193,6 @@ main{
     background-color: rgb(255, 255, 255);
     padding: 0rem 1rem 1rem 1rem;
 }
-
 #editform-sub{
     border: none;
     border-radius: 1rem;
@@ -322,13 +203,13 @@ main{
     color: white;
     font-weight: bold;
     flex: 1;
-}
-
+} */
+/* 
 #editform-sub:hover{
     cursor: pointer;
     background-image: linear-gradient(to bottom, rgba(0, 128, 68, 0.822), rgba(0, 68, 255, 0.822));
 
-}
+} */
 
 #remove{
     border: none;
@@ -341,6 +222,7 @@ main{
     font-weight: bold;
     flex: 1;
 }
+/* 
 
 #remove:hover{
     cursor: pointer;
@@ -405,7 +287,7 @@ main{
     cursor: pointer;
 } */
 
-.form-header > h2{
+/* .form-header > h2{
     padding-top: 1rem;
 }
 
@@ -414,7 +296,7 @@ main{
     padding: 0.3rem;
     margin-bottom: 1rem;
     /*outline: px solid green;*/
-    outline: none;
+    /* outline: none;
     border: 0;
     border-bottom: 1px solid black;
 
@@ -447,7 +329,7 @@ main{
 .form-body > form > button:hover{
     cursor: pointer;
     background-image: linear-gradient(to bottom, rgb(128, 0, 128), rgba(255, 0, 0, 0.986));
-}
+}  */ 
 
 /* .error-edit, .error{
     color: red;
